# openaichain

./: CMakeLists.txt  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  oac.doxygen.in  oac_build.sh  testnet.md  testnet.template
.buildkite/: coverage.yml  debug.yml  pipeline.yml
CMakeModules/: FindWasm.cmake  MASSigning.cmake  doxygen.cmake  installer.cmake  wasm.cmake
Docker/: README.md  cloac.sh  config.ini  docker-compose-oac1.0.yaml  docker-compose.yml  nodoacd.sh
build-aux/: config.guess  config.sub  ltmain.sh
build-aux/m4/: libtool.m4  oaccoin_find_bdb48.m4  oaccoin_qt.m4  oaccoin_subdir_to_include.m4
contracts/: CMakeLists.txt
contracts/asserter/: CMakeLists.txt  asserter.abi  asserter.cpp  asserter.hpp
contracts/bancor/: CMakeLists.txt  bancor.cpp  bancor.hpp  converter.hpp
contracts/dice/: CMakeLists.txt  README.md  dice.abi  dice.cpp
contracts/exchange/: CMakeLists.txt  exchange.abi  exchange.cpp  exchange.hpp  exchange_accounts.cpp  exchange_accounts.hpp  exchange_state.cpp  exchange_state.hpp  market_state.cpp  market_state.hpp  test_exchange.cpp
contracts/hello/: CMakeLists.txt  (+3 more)
contrib/: README.md  oaccoin-qt.pro  oaccoind.bash-completion  qt_translations.py  tidy_datadir.sh
depends/: Makefile  README  README.usage  config.guess  config.site.in  config.sub
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
libraries/testing/include/oac/testing/: chainbase_fixture.hpp  tester.hpp  tester_network.hpp
libraries/utilities/: CMakeLists.txt  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/utilities/include/oac/utilities/: common.hpp  git_revision.hpp  key_conversion.hpp  padding_ostream.hpp  parallel_markers.hpp  rand.hpp  string_escape.hpp  tempdir.hpp  words.hpp
plugins/: oac-make_new_plugin.sh
plugins/account_history_plugin/: CMakeLists.txt  account_history_plugin.cpp
plugins/account_history_plugin/include/oac/account_history_plugin/: account_transaction_history_object.hpp  transaction_history_object.hpp
programs/: CMakeLists.txt
programs/koacd/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  abigen.sh  oac-tn_bounce.sh  oac-tn_down.sh  oac-tn_roll.sh  oac-tn_up.sh  oac_build_amazon.sh  oac_build_centos.sh  oac_build_darwin.sh  oac_build_fedora.sh  oac_build_ubuntu.sh
share/: setup.nsi  setup.nsi.in  ui.rc
tests/: CMakeLists.txt  consensus-validation-malicious-producers.py  distributed-transactions-remote-test.py  distributed-transactions-test.py  impaired_network.py  lossy_network.py  nodoac_run_remote_test.py  nodoac_run_test.py  p2p_network_test.py  p2p_stress.py  p2p_test_peers.py  restart-scenarios-test.py  testUtils.py  trans_sync_across_mixed_cluster_test.sh  validate-dirty-db.py  wallet_tests.cpp
unittests/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  currency_tests.cpp  database_tests.cpp  delay_tests.cpp  dice_tests.cpp  exchange_tests.cpp  forked_tests.cpp  identity_tests.cpp  main.cpp  message_buffer_tests.cpp  misc_tests.cpp  multi_index_tests.cpp  multisig_tests.cpp  oac.system_tests.cpp  oac.token_tests.cpp  oac_system_tester.hpp  payloadless_tests.cpp  producer_schedule_tests.cpp  ram_tests.cpp  resource_limits_test.cpp  special_accounts_tests.cpp  tic_tac_toe_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+503 files in other folders)
